[project]
name = "pubmed-paper-fetcher"
version = "0.1.0"
description = "Fetch research papers from PubMed based on user queries"
authors = [
    {name = "shaikshabeena438@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.scripts]
get-papers-list = "fetch_papers:main"
[tool.poetry]
name = "pubmed-paper-fetcher"
version = "0.1.0"
description = "A tool to fetch and filter research papers from PubMed"
authors = ["Your Name <your.shaikshabeena438@example.com>"]
readme = "README.md"
packages = [{include = "fetch_papers.py"}]


